--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~9.1.9",
     "@angular/compiler": "~9.1.9",
     "@angular/core": "~9.1.9",
+    "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "~9.1.9",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "~9.2.1",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "core-js": "^2.5.4",
+    "moment": "^2.26.0",
     "rxjs": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
